[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/editMap.gd" type="Script" id=1]
[ext_resource path="res://scenes/itemList.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/attribute.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/attr.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/attr_dropDown.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/toolBtn.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/title.tscn" type="PackedScene" id=8]
[ext_resource path="res://theme/myTheme.tres" type="Theme" id=9]

[node name="map" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="layer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="layer"]
theme = ExtResource( 9 )

[node name="tab" type="TabContainer" parent="layer/Control"]
margin_left = 408.0
margin_top = 5.0
margin_right = 638.0
margin_bottom = 479.0

[node name="common" type="VBoxContainer" parent="layer/Control/tab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 29.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="layer/Control/tab/common"]
margin_right = 226.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mapWidth" parent="layer/Control/tab/common/vbox" instance=ExtResource( 5 )]
margin_right = 226.0
margin_bottom = 25.0
key = "mapWidth"
value = "20"

[node name="time" parent="layer/Control/tab/common/vbox" instance=ExtResource( 5 )]
margin_top = 29.0
margin_right = 226.0
margin_bottom = 54.0
key = "gameTime"
value = "400"

[node name="mapName" parent="layer/Control/tab/common/vbox" instance=ExtResource( 5 )]
margin_top = 58.0
margin_right = 226.0
margin_bottom = 83.0
key = "mapName"

[node name="nextLevel" parent="layer/Control/tab/common/vbox" instance=ExtResource( 5 )]
margin_top = 87.0
margin_right = 226.0
margin_bottom = 112.0
key = "nextLevel"

[node name="subLevel" parent="layer/Control/tab/common/vbox" instance=ExtResource( 5 )]
margin_top = 116.0
margin_right = 226.0
margin_bottom = 141.0
key = "subLevel"

[node name="status" parent="layer/Control/tab/common/vbox" instance=ExtResource( 5 )]
margin_top = 145.0
margin_right = 226.0
margin_bottom = 170.0
key = "mStatus"

[node name="background" parent="layer/Control/tab/common/vbox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 174.0
margin_right = 226.0
margin_bottom = 209.0
key = "background"
list = [ "overworld", "castle", "underwater" ]

[node name="music" parent="layer/Control/tab/common/vbox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 213.0
margin_right = 226.0
margin_bottom = 248.0
key = "music"
list = [ "overworld", "castle", "underwater", "underground" ]

[node name="spriteset" parent="layer/Control/tab/common/vbox" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 220.0
margin_bottom = 163.0
key = "spriteset"
list = [ "overworld", "castle", "underwater" ]

[node name="bonusLevel" parent="layer/Control/tab/common/vbox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 226.0
margin_bottom = 287.0
alignment = 1
key = "bonusLevel"
list = [ "false", "true" ]

[node name="underwater" parent="layer/Control/tab/common/vbox" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 291.0
margin_right = 226.0
margin_bottom = 326.0
key = "underwater"
list = [ "false", "true" ]

[node name="VBoxContainer" type="VBoxContainer" parent="layer/Control/tab/common"]
margin_top = 330.0
margin_right = 226.0
margin_bottom = 447.0
size_flags_horizontal = 3

[node name="hbox2" type="HBoxContainer" parent="layer/Control/tab/common/VBoxContainer"]
margin_right = 226.0

[node name="apply" type="Button" parent="layer/Control/tab/common/VBoxContainer/hbox2"]
visible = false
margin_right = 220.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "APPLY"

[node name="hbox" type="HBoxContainer" parent="layer/Control/tab/common/VBoxContainer"]
margin_top = 4.0
margin_right = 226.0
margin_bottom = 39.0
size_flags_vertical = 9

[node name="save" type="Button" parent="layer/Control/tab/common/VBoxContainer/hbox"]
margin_right = 111.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "SAVE"

[node name="hide" type="Button" parent="layer/Control/tab/common/VBoxContainer/hbox"]
margin_left = 115.0
margin_right = 226.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HIDE"

[node name="hbox1" type="VBoxContainer" parent="layer/Control/tab/common/VBoxContainer"]
margin_top = 43.0
margin_right = 226.0
margin_bottom = 117.0
size_flags_horizontal = 3

[node name="load" type="Button" parent="layer/Control/tab/common/VBoxContainer/hbox1"]
margin_right = 226.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "LOAD"

[node name="return" type="Button" parent="layer/Control/tab/common/VBoxContainer/hbox1"]
margin_top = 39.0
margin_right = 226.0
margin_bottom = 74.0
size_flags_horizontal = 3
text = "RETURN"

[node name="map" type="PanelContainer" parent="layer/Control/tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="layer/Control/tab/map"]
margin_right = 222.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemList" parent="layer/Control/tab/map/vbox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 222.0
margin_bottom = 197.0
size_flags_vertical = 3

[node name="attribute" parent="layer/Control/tab/map/vbox" instance=ExtResource( 3 )]
margin_top = 201.0
margin_right = 222.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="layer/Control/tab/map/vbox"]
margin_top = 403.0
margin_right = 222.0
margin_bottom = 438.0
size_flags_horizontal = 3

[node name="edit" type="Button" parent="layer/Control/tab/map/vbox/HBoxContainer"]
margin_right = 222.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "EDIT"

[node name="toolBtn" parent="layer/Control" instance=ExtResource( 7 )]
visible = false
margin_left = 16.0
margin_top = 192.0
margin_right = 53.0
margin_bottom = 212.0

[node name="FileDialog" type="FileDialog" parent="layer"]
margin_right = 280.0
margin_bottom = 300.0
popup_exclusive = true
window_title = "保存文件"
resizable = true
dialog_text = "save map data to file"
access = 2

[node name="loadDialog" type="FileDialog" parent="layer"]
margin_right = 376.0
margin_bottom = 300.0
popup_exclusive = true
window_title = "打开文件"
resizable = true
mode = 0
access = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = -405.0
margin_right = 68.0
margin_bottom = -382.0
theme = ExtResource( 4 )
text = "fps:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="layer"]
margin_right = 200.0
margin_bottom = 70.0
window_title = "请确认..."
dialog_text = "是否退出"

[node name="title" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="pressed" from="layer/Control/tab/common/VBoxContainer/hbox2/apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="layer/Control/tab/common/VBoxContainer/hbox/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="layer/Control/tab/common/VBoxContainer/hbox/hide" to="." method="_on_hide_pressed"]
[connection signal="pressed" from="layer/Control/tab/common/VBoxContainer/hbox1/load" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="layer/Control/tab/common/VBoxContainer/hbox1/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="layer/Control/tab/map/vbox/HBoxContainer/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="layer/Control/toolBtn" to="." method="_on_toolBtn_pressed"]
[connection signal="confirmed" from="layer/FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="file_selected" from="layer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="layer/loadDialog" to="." method="_on_loadDialog_confirmed"]
[connection signal="file_selected" from="layer/loadDialog" to="." method="_on_loadDialog_file_selected"]
[connection signal="confirmed" from="layer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
